--- a/resources/.editorconfig
+++ b/resources/.editorconfig
@@ -14,9 +14,9 @@ insert_final_newline = true
 indent_style = space
 indent_size = 2
 
-[{*.css,*.scss}]
+[{*.css,*.scss,*.sass}]
 indent_style = space
-ident_size = 4
+ident_size = 2
 
 [*.js]
 indent_style = space
@@ -25,3 +25,6 @@ ident_size = 2
 [*.yml]
 indent_style = space
 indent_size = 4
+
+[*.md]
+trim_trailing_whitespace = false
